Fixing missing canvas tag

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             <a name="drawing"></a>
             <h2 class="blog-post-title">Drawing with GA</h2>
             <a href="javascript:;" onclick="p.nextGeneration()" title="Play"><i class="glyphicon glyphicon-play"></i></a></p>
-            <canvas id="escopo" width="600" height="600" style="border:1px solid #d3d3d3;">
+            <canvas id="escopo" width="600" height="600" style="border:1px solid #d3d3d3;"></canvas>
             <a href="https://github.com/eduan/jsexperiments/blob/master/gadrawaline.html" target="_blank">Source code</a> | 
             <a href="https://en.wikipedia.org/wiki/Genetic_algorithm" target="_blank">What's this?</a>
 
