--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
-<html>
-    <head>
+<!DOCTYPE html>
+    <html lang="en">
         <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
         <link rel="stylesheet" type="text/css" href="css/bootstrap-theme.min.css">
         <link rel="stylesheet" type="text/css" href="css/style.css">
@@ -80,7 +80,6 @@
         <a href="#">Back to top</a>
       </p>
     </footer>
-    </body>
     <script type="text/javascript" src="js/animation.js"></script>
     <script type="text/javascript" src="js/gameoflife.js"></script>
     <script type="text/javascript" src="js/drawingga.js"></script>
@@ -94,4 +93,5 @@
       ga('send', 'pageview');
 
     </script>
+    </body>
 </html>
